# claude-forge

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MIGRATION.ko.md  MIGRATION.md  README.ko.md  README.md  README.zh.md  STUDY_LOG.md  index.html  install.ps1  install.sh  mcp-servers.json  mcp-servers.optional.json  prompt_plan.md  settings.json  spec.md  uninstall.sh
crm/email-automation/: .gitignore  README.md  pyproject.toml
crm/email-automation/data/: customers.csv
crm/email-automation/src/email_automation/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  reader.py  renderer.py  templates.py  writer.py
crm/email-automation/tests/: conftest.py  test_cli.py  test_reader.py  test_renderer.py  test_writer.py
gov-monitoring/mobility-rfp-monitor/: .gitignore  README.md  config.example.yaml  pyproject.toml
gov-monitoring/mobility-rfp-monitor/src/mobility_rfp_monitor/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  filter.py  keywords.py  models.py  notifier.py  state.py
gov-monitoring/mobility-rfp-monitor/src/mobility_rfp_monitor/channels/: __init__.py  base.py  discord.py  email.py  slack.py  webhook.py
gov-monitoring/mobility-rfp-monitor/tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_filter.py  test_keywords.py  test_models.py  test_notifier.py  test_state.py
gov-monitoring/mobility-rfp-monitor/tests/fixtures/: mss_response.json
gov-monitoring/mobility-rfp-monitor/tests/test_channels/: test_discord.py  test_email.py  test_slack.py  test_webhook.py
(+282 files in other folders)
