[project]
name = "mobility-rfp-monitor"
version = "0.1.0"
description = "K-Startup/나라장터 모빌리티·MaaS 공고 모니터링 CLI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
mobility-rfp-monitor = "mobility_rfp_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mobility_rfp_monitor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
